# Medical-Supply-Project

./: .env  README.md  app.py  delivery_status.html  delivery_table.html  drone_info.html  drone_map.html  index.html  main.py  priority_model.pkl  pyproject.toml  requirements.txt  weather_encoder.pkl
